# weather-ml

./: README.md  dataMERGED_bakersfield_pm25_2016-2025.csv  dataNOAA_bakersfield_pm25_2016-2025_72384023155.csv  dataOpenAQ_bakersfield_pm25_2016-2025_887-901-6883-6885-6886-8473-28777-230814-269725.csv  main.py  noaa.noaa_pq.ddl  openaq-db.openaq.ddl  pyproject.toml
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/: learner.pkl  metadata.json
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/models/: trainer.pkl
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/models/ExtraTreesEntr_BAG_L1/: model.pkl
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/models/ExtraTreesEntr_BAG_L2/: model.pkl
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/models/ExtraTreesGini_BAG_L1/: model.pkl
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/models/ExtraTreesGini_BAG_L2/: model.pkl
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/models/ExtraTrees_r126_BAG_L1/: model.pkl
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/models/ExtraTrees_r172_BAG_L1/: model.pkl
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/models/ExtraTrees_r178_BAG_L1/: model.pkl
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/models/ExtraTrees_r197_BAG_L1/: model.pkl
AutogluonModels/aq_bakersfield_pm25_2016-2025/ds_sub_fit/sub_fit_ho/models/ExtraTrees_r42_BAG_L1/: model.pkl
(+375 files in other folders)
