[tool.poetry]
name = "aqi-by-weather"
version = "0.1.0"
description = "A project for AQI prediction using weather data"
authors = ["jminz"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
boto3 = "^1.0"
pandas = "^2.0"
numpy = "^1.0"
requests = "^2.0"
ipywidgets = "^7.0"
scikit-learn = "^1.0"
matplotlib = "^3.0"
autogluon = "^1.2"
pyathena = "^3.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"